fix overflow

--- a/static/content/site.css
+++ b/static/content/site.css
@@ -687,14 +687,14 @@ svg {
 /*          ----------            -webkit-scrollbar          ----------          */
 
 #content::-webkit-scrollbar, #frames_Area::-webkit-scrollbar, #kindAnimationsArea::-webkit-scrollbar,
-#brandPageContainer::-webkit-scrollbar, #collection_animation_area::-webkit-scrollbar {
+#brandPageContainer::-webkit-scrollbar, #collection_animation_area::-webkit-scrollbar, div.card-group::-webkit-scrollbar {
     width: 8px;
     padding: 1.25rem 1.25rem;
     height: 4%;
 }
 
 #content::-webkit-scrollbar-track, #frames_Area::-webkit-scrollbar-track, #kindAnimationsArea::-webkit-scrollbar-track,
-#brandPageContainer::-webkit-scrollbar-track,  #collection_animation_area::-webkit-scrollbar-track {
+#brandPageContainer::-webkit-scrollbar-track,  #collection_animation_area::-webkit-scrollbar-track, div.card-group::-webkit-scrollbar-track  {
     background-color: #f7f8f9;
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.2);
@@ -702,7 +702,7 @@ svg {
 }
 
 #content::-webkit-scrollbar-thumb, #frames_Area::-webkit-scrollbar-thumb, #kindAnimationsArea::-webkit-scrollbar-thumb,
-#brandPageContainer::-webkit-scrollbar-thumb,#collection_animation_area::-webkit-scrollbar-thumb {
+#brandPageContainer::-webkit-scrollbar-thumb,#collection_animation_area::-webkit-scrollbar-thumb, div.card-group::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background-color: #dbdbdb;
     border: 2px solid #d3d3d3;
@@ -1620,17 +1620,21 @@ hr.solid {
 }
 
 .video_sizes{
-    width: 10vw;
-    height: 30vh;
+    min-height:  30vh;
+    max-height:  30vh;
+    min-width: 10vw;
+    max-width: 10vw;
     margin-left: 2rem !important;
+    margin-bottom: 2rem !important;
+
     padding: 1rem;
 }
 
 .card{
     background: #FFFFFF;
     box-sizing: border-box;
-    box-shadow: 0px 2.67431px 5.06354px rgba(8, 5, 80, 0.02), 0px 4.6279px 16.8565px rgba(8, 5, 80, 0.0170142), 0px 8.79937px 44.8316px rgba(8, 5, 80, 0.0090356);
-    border-radius: 1rem !important;
+    /*box-shadow: 0px 2.67431px 5.06354px rgba(8, 5, 80, 0.02), 0px 4.6279px 16.8565px rgba(8, 5, 80, 0.0170142), 0px 8.79937px 44.8316px rgba(8, 5, 80, 0.0090356);*/
+    box-shadow: 0px 2.67431px 5.06354px rgba(8, 5, 80, 0.03), 0px 4.6279px 16.8565px rgba(8, 5, 80, 0.0190142), 0px 8.79937px 44.8316px rgba(8, 5, 80, 0.019);    border-radius: 1rem !important;
     border: 2px solid #F9FAFB;
     -webkit-transition: border 0.2s ease-out;
     -moz-transition: border 0.2s ease-out;
@@ -1641,13 +1645,15 @@ hr.solid {
 }
 
 .card:hover{
-    box-shadow: 0px 4.67px 12px rgba(8, 5, 80, 0.12), 0px 4.6279px 16.8565px rgba(8, 5, 80, 0.0170142), 0px 8.79937px 44.8316px rgba(8, 5, 80, 0.0090356), 0px 26.5442px 113.972px rgba(8, 5, 80, 0.00699759), 0px 202px 100px rgba(8, 5, 80, 0.0148);
+    box-shadow: 0px 4.67px 12px rgba(2, 85, 99, 0.24), 0px 4.6279px 16.8565px rgba(8, 5, 80, 0.0270142), 0px 8.79937px 44.8316px rgba(8, 5, 80, 0.0190356), 0px 26.5442px 113.972px rgba(8, 5, 80, 0.03699759), 0px 202px 100px rgba(8, 5, 80, 0.0148);
     border: 2px solid #00B6DE;
     -webkit-transition: border 0.2s ease-out;
     -moz-transition: border 0.2s ease-out;
     -o-transition: border 0.2s ease-out;
     transition: border 0.2s ease-out;
     border-right: 2px #00B6DE solid !important;
+
+    cursor: pointer;
 }
 
 .card-body{
@@ -1671,7 +1677,7 @@ h5.card-title{
 
 
 .card:hover h5.card-title{
-    color: #00B6DE;
+    color: #005363;
     -webkit-transition: color 0.2s ease-out;
     -moz-transition: color 0.2s ease-out;
     -o-transition: color 0.2s ease-out;
@@ -1689,6 +1695,12 @@ h5.card-title{
     max-width:100%;
     max-height:100%;
     margin: auto;
+    border-radius: 1rem !important;
+
+    -webkit-transition: max-height 0.2s ease-out;
+    -moz-transition: max-height 0.2s ease-out;
+    -o-transition: max-height 0.2s ease-out;
+    transition: max-height 0.2s ease-out;
 }
 
 .img_wrapper {
@@ -1697,6 +1709,11 @@ h5.card-title{
     width: 8vw;
     height: 16vh;
     display: flex;
+
+    -webkit-transition: height 0.2s ease-out;
+    -moz-transition: height 0.2s ease-out;
+    -o-transition: height 0.2s ease-out;
+    transition: height 0.2s ease-out;
 }
 
 .status_working{
@@ -1755,9 +1772,30 @@ h5.card-title{
     transition: background-color 0.2s ease-out;
 }
 
-.more_actions_card{
-    cursor: pointer;
+.card:hover .card-footer {
+    display: block;
 }
+
+.card:hover .img_wrapper {
+    height: 12vh;
+    opacity: 0.6;
+
+    -webkit-transition: height 0.3s ease-out;
+    -moz-transition: height 0.3s ease-out;
+    -o-transition: height 0.3s ease-out;
+    transition: height 0.3s ease-out;
+}
+
+.card:hover .card-img-top {
+    height:120%;
+    width:220%;
+
+    -webkit-transition: max-height 0.2s ease-out;
+    -moz-transition: max-height 0.2s ease-out;
+    -o-transition: max-height 0.2s ease-out;
+    transition: max-height 0.2s ease-out;
+}
+
 
 .plus_icon_more{
     font-size: 6vw;
@@ -1765,5 +1803,49 @@ h5.card-title{
 
 #newVideoBtn  div{
     line-height: 3vh;
+}
 
+div.card-group{
+    width: 82vw;
+    overflow: auto;
+    height: 88vh;
+    overflow-x: hidden;
+}
+
+.card-icons-svg{
+    width: 1.25rem;
+    height: 1.25rem;
+    cursor: pointer;
+    margin: 0 0.5rem;
+
+    fill: #828282;
+    -webkit-transition: fill 0.2s ease-out;
+    -moz-transition: fill 0.2s ease-out;
+    -o-transition: fill 0.2s ease-out;
+    transition: fill 0.2s ease-out;
+}
+
+.disabled_svg{
+    cursor: default;
+    fill: rgba(130, 130, 130, 0.24 );
+}
+
+.disabled_svg:hover{
+    fill: rgba(130, 130, 130, 0.11) !important;
+
+}
+.card-icons-svg:hover{
+    fill: black;
+    -webkit-transition: fill 0.2s ease-out;
+    -moz-transition: fill 0.2s ease-out;
+    -o-transition: fill 0.2s ease-out;
+    transition: fill 0.2s ease-out;
+}
+
+.card-footer{
+    margin-top: 1rem;
+    padding:  0.75rem 0.5rem;
+    display: none;
+    background-color: transparent;
+    border-top-color: rgba(72, 95, 110, 0.12);
 }
